--- a/code/res/values/dimens.xml
+++ b/code/res/values/dimens.xml
@@ -3,6 +3,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="movable_item_w_and_h">35dp</dimen>
+    <dimen name="movable_item_w_and_h">40dp</dimen>
+    <dimen name="action_bar_movable_item_w_and_h">25dp</dimen>
+    <dimen name="movable_item_padding">8dp</dimen>
 
 </resources>
