--- a/code/res/values/dimens.xml
+++ b/code/res/values/dimens.xml
@@ -6,5 +6,7 @@
     <dimen name="movable_item_w_and_h">40dp</dimen>
     <dimen name="action_bar_movable_item_w_and_h">25dp</dimen>
     <dimen name="movable_item_padding">8dp</dimen>
+    <dimen name="saved_data_list_item_height">60dp</dimen>
+    <dimen name="saved_data_list_item_title_textsize">24sp</dimen>
 
 </resources>
