--- a/code/res/menu/main.xml
+++ b/code/res/menu/main.xml
@@ -22,5 +22,10 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_bar_load"/>
+    <item
+        android:id="@+id/action_share"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_bar_share"/>
 
 </menu>
