--- a/code/res/menu/main.xml
+++ b/code/res/menu/main.xml
@@ -24,8 +24,9 @@
         android:title="@string/action_bar_load"/>
     <item
         android:id="@+id/action_replay"
-        android:orderInCategory="100"
-        android:showAsAction="never"
+        android:orderInCategory="1"
+        android:showAsAction="always"
+        android:icon="@drawable/replay"
         android:title="@string/action_bar_replay"/>
     <item
         android:id="@+id/action_share"
