--- a/code/res/menu/main.xml
+++ b/code/res/menu/main.xml
@@ -29,6 +29,12 @@
         android:showAsAction="never"
         android:title="@string/action_bar_replay"/>
     <item
+        android:id="@+id/action_undo"
+        android:orderInCategory="2"
+        android:showAsAction="ifRoom"
+        android:icon="@drawable/replay"
+        android:title="@string/action_bar_undo"/>
+    <item
         android:id="@+id/action_share"
         android:orderInCategory="100"
         android:showAsAction="never"
