--- a/code/res/layout/play_ground_fragment.xml
+++ b/code/res/layout/play_ground_fragment.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/playground_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -83,10 +84,27 @@
         android:layout_below="@+id/playground_options"
         android:background="#000000" />
 
+    <LinearLayout
+        android:id="@+id/playground_bottom_banner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical" >
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            ads:adSize="SMART_BANNER"
+            ads:adUnitId="@string/playground_bottom_banner_id" />
+    </LinearLayout>
+
     <com.bj4.yhh.coachboard.PlayGround
         android:id="@+id/playground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/playground_bottom_banner"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/playground_sep" >
     </com.bj4.yhh.coachboard.PlayGround>
