add back functions

--- a/code/res/layout/settings_fragment.xml
+++ b/code/res/layout/settings_fragment.xml
@@ -15,6 +15,13 @@
         android:background="@drawable/settings_item_background"
         android:orientation="vertical" >
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:text="@string/settings_sport_type"
+            android:textSize="@dimen/setting_title_text_size" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,23 +84,41 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/settings_item_background"
-        android:orientation="horizontal" >
+        android:orientation="vertical" >
 
         <TextView
-            android:layout_width="0dip"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="2"
-            android:gravity="center_vertical|left"
-            android:text="@string/settings_enable_backpress" />
+            android:layout_margin="10dp"
+            android:text="@string/settings_function_backpress"
+            android:textSize="@dimen/setting_title_text_size" />
 
-        <CheckBox
-            android:id="@+id/enable_backpress_cb"
-            android:layout_width="0dip"
-            android:layout_height="match_parent"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical|right" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <RadioButton
+                android:id="@+id/backkey_function_system"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/settings_function_backpress_system" />
+
+            <RadioButton
+                android:id="@+id/backkey_function_disable"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/settings_function_backpress_disable" />
+
+            <RadioButton
+                android:id="@+id/backkey_function_undo"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/settings_function_backpress_undo" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
