--- a/code/res/values/dimens.xml
+++ b/code/res/values/dimens.xml
@@ -9,5 +9,6 @@
     <dimen name="saved_data_list_item_height">60dp</dimen>
     <dimen name="saved_data_list_item_title_textsize">24sp</dimen>
     <dimen name="team_number_text_size">20sp</dimen>
+    <dimen name="setting_title_text_size">18sp</dimen>
 
 </resources>
