add set item status

--- a/code/res/layout/play_ground_fragment.xml
+++ b/code/res/layout/play_ground_fragment.xml
@@ -25,6 +25,7 @@
                 android:layout_gravity="center" />
 
             <ImageView
+                android:id="@+id/playground_red_status"
                 android:layout_width="@dimen/action_bar_movable_item_w_and_h"
                 android:layout_height="@dimen/action_bar_movable_item_w_and_h"
                 android:layout_gravity="center"
@@ -39,6 +40,7 @@
                 android:layout_gravity="center" />
 
             <ImageView
+                android:id="@+id/playground_blue_status"
                 android:layout_width="@dimen/action_bar_movable_item_w_and_h"
                 android:layout_height="@dimen/action_bar_movable_item_w_and_h"
                 android:layout_gravity="center"
@@ -53,6 +55,7 @@
                 android:layout_gravity="center" />
 
             <ImageView
+                android:id="@+id/playground_ball_status"
                 android:layout_width="@dimen/action_bar_movable_item_w_and_h"
                 android:layout_height="@dimen/action_bar_movable_item_w_and_h"
                 android:layout_gravity="center"
