--- a/code/res/xml/simple_data_widget.xml
+++ b/code/res/xml/simple_data_widget.xml
@@ -2,7 +2,8 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialLayout="@layout/saved_data_list_item"
     android:minHeight="72dp"
+    android:minWidth="294dp"
     android:previewImage="@drawable/ic_launcher"
-    android:minWidth="294dp" >
+    android:resizeMode="horizontal|vertical" >
 
 </appwidget-provider>
